Erg: New path for test page

--- a/Yoplet/test/test.html
+++ b/Yoplet/test/test.html
@@ -3,7 +3,7 @@
         <title> L'applet a Toto </title>
     </head>
 <body>
-	<applet code="org.lostinthegarden.applet.impl.DefaultFileOperatorImpl.class" archive="applet.jar" width="800" height="300">
+	<applet code="org.lostinthegarden.applet.impl.DefaultFileOperatorImpl.class" archive="../build/archives/yoplet.jar" width="800" height="300">
 		<param name="SOURCEFILE" value="/home/erwan/.bashrc"/>
 		<param name="DESTFILE" value="/home/erwan/.bashrc2"/>
 		<param name="URL" value="http://erwan.legoulven.free.fr/index.php"/>
